--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,10 @@
     },
     
     "require": {
-        "php": "^7.4 || ~8.0.0 || ~8.1.0"
+        "php": "^7.4 || ~8.0.0 || ~8.1.0",
+        "psr/http-server-middleware": "^1.0",
+        "psr/container": "^1.0",
+        "laminas/laminas-diactoros": "^2.11"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5.11"
