--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     },
     
     "require": {
-        "php": "^7.4 || ~8.0.0 || ~8.1.0",
+        "php": "^8.0.0",
         "psr/http-server-middleware": "^1.0",
         "psr/container": "^1.0",
         "laminas/laminas-diactoros": "^2.11"
