--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "php": "^8.0.0",
         "psr/http-server-middleware": "^1.0",
         "psr/container": "^1.0",
-        "laminas/laminas-diactoros": "^2.11"
+        "laminas/laminas-diactoros": "^2.11",
+        "symfony/console": "^6"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5.11"
